Fixed the issue where two vertical scrollbars were showing

--- a/src/styles/base-styles.css
+++ b/src/styles/base-styles.css
@@ -23,7 +23,6 @@ h3{
 html{
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
 }
 
 body{
